# emploo

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
emploo/: __main__.py
tests/: test_emploo.py
